--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
       <a-marker preset=’hiro’>
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity 
-            obj-model=”obj: url(/path/to/nameOfFile.obj); 
-            mtl: url(/path/to/nameOfFile.mtl)”>
+            collada-model = "url(https://github.com/ddesmond/theatre-ar/blob/master/box_rot.dae)”>
         </a-entity>
               
       </a-marker>
