--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
       <a-marker preset="hiro">
-          <a-box position='0 0.5 0' material='color: yellow;'></a-box>
+          <a-entity 
+                collada-model=”url(https://github.com/ddesmond/theatre-ar/blob/master/model_v01.dae)”>
+          </a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
