--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <a-scene embedded arjs>
       <a-marker preset="hiro">
           <a-entity 
-                collada-model=”url(https://github.com/ddesmond/theatre-ar/blob/master/model_v01.dae)”>
+                collada-model=”url(https://raw.githubusercontent.com/ddesmond/theatre-ar/master/model_v01.dae)”>
           </a-entity>
       </a-marker>
       <a-entity camera></a-entity>
