--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
       <a-marker preset="hiro">
-          <a-entity 
-                collada-model="url(https://raw.githubusercontent.com/ddesmond/theatre-ar/master/ar_cut_v004_kit_v1.dae)">
-          </a-entity>
+          <a-assets>
+            <a-asset-item id="tree" src="https://raw.githubusercontent.com/ddesmond/theatre-ar/master/ar_cut_v004_kit_v1.dae"></a-asset-item>
+          </a-assets>
+
+
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
