--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <a-scene embedded arjs>
       <a-marker preset="hiro">
                   <!-- Adding an OBJ file to an AR Project-->
-            <a-entity>
-            obj-model="obj: url(https://github.com/ddesmond/theatre-ar/raw/master/box.obj); 
+            <a-entity obj-model="obj: url(https://github.com/ddesmond/theatre-ar/raw/master/box.obj); 
             mtl: url(https://github.com/ddesmond/theatre-ar/raw/master/box.mtl)">
             </a-entity>
       </a-marker>
