--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <a-scene embedded arjs>
     <!-- create your content here. just a box for now -->
         <a-entity>
-            obj-model="obj: url(https://ddesmond.github.io/theatre-ar/box.obj); 
-            mtl: url(https://ddesmond.github.io/theatre-ar/box.mtl)">
+            obj-model="obj: url(https://ddesmond.github.io/theatre-ar/sp.obj); 
+            mtl: url(https://ddesmond.github.io/theatre-ar/sp.mtl)">
         </a-entity>
     <!-- define a camera which will move according to the marker position -->
     <a-text value="Hello, World!"></a-text>
