--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <!-- include ar.js for A-Frame -->
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs>
+  <a-scene embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;' hidden>
     <!-- create your content here. just a box for now -->
-        <a-entity>
-            obj-model="obj: url(https://ddesmond.github.io/theatre-ar/sp.obj); 
-            mtl: url(https://ddesmond.github.io/theatre-ar/sp.mtl)">
-        </a-entity>
+<a-assets>
+      <a-asset-item id="box_mtl" src="https://raw.githubusercontent.com/prashant-andani/AR-Alphabets-words/master/assets/airplane/FREOBJ.mtl"></a-asset-item>
+      <a-asset-item id="box_obj" src="https://raw.githubusercontent.com/prashant-andani/AR-Alphabets-words/master/assets/airplane/FREOBJ.obj"></a-asset-item>
+</a-assets>
+
+    <a-marker preset="hiro">
+    </a-marker>
     <!-- define a camera which will move according to the marker position -->
-    <a-text value="Hello, World!"></a-text>
+
     <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 </body>
