--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;' hidden>
     <!-- create your content here. just a box for now -->
-<a-assets>
-      <a-asset-item id="box_mtl" src="https://raw.githubusercontent.com/prashant-andani/AR-Alphabets-words/master/assets/airplane/FREOBJ.mtl"></a-asset-item>
-      <a-asset-item id="box_obj" src="https://raw.githubusercontent.com/prashant-andani/AR-Alphabets-words/master/assets/airplane/FREOBJ.obj"></a-asset-item>
-</a-assets>
-
+<a-entity 
+collada-model="url(https://ddesmond.github.io/theatre-ar/box.dae)">
+</a-entity>
     <a-marker preset="hiro">
     </a-marker>
     <!-- define a camera which will move according to the marker position -->
