--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <a-scene embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;' hidden>
     <!-- create your content here. just a box for now -->
 <a-entity 
-collada-model="url(https://github.com/ddesmond/theatre-ar/raw/master/box.dae)">
+collada-model="url(https://raw.githubusercontent.com/ddesmond/theatre-ar/master/box.dae)">
 </a-entity>
     <a-marker preset="hiro">
     </a-marker>
