--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- include ar.js for A-Frame -->
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;' hidden>
+  <a-scene embedded arjs='debugUIEnabled: false;' hidden>
     <!-- create your content here. just a box for now -->
 <a-entity 
 collada-model="url(http://ddesmond.github.io/theatre-ar/box.dae)" scale="0.01 0.01 0.01">
