--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!-- include A-Frame obviously -->
-<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-<!-- include ar.js for A-Frame -->
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-<body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs='debugUIEnabled: false;' hidden>
-    <!-- create your content here. just a box for now -->
-<a-entity 
-collada-model="url(https://ddesmond.github.io/theatre-ar/box.dae)" scale="0.01 0.01 0.01">
-</a-entity>
-    <a-marker preset="hiro">
-    </a-marker>
-    <!-- define a camera which will move according to the marker position -->
-
-    <a-marker-camera preset='hiro'></a-marker-camera>
-  </a-scene>
+<script src=”https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+<script src=”https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<body style="margin : 0px; overflow: hidden;">
+     <a-scene embedded arjs>
+      <a-marker preset="hiro">
+          <a-box position='0 0.5 0' material='color: yellow;'></a-box>
+      </a-marker>
+      <a-entity camera></a-entity>
+    </a-scene>
 </body>
