--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!doctype HTML>
+<html>
 <!-- include A-Frame obviously -->
 <script src=”https://aframe.io/releases/0.6.1/aframe.min.js"></script>
 <script src=”https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
@@ -9,3 +11,4 @@
       <a-entity camera></a-entity>
     </a-scene>
 </body>
+</html>
