--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
      <a-scene embedded arjs>
       <a-marker preset="hiro">
           <a-box position="0 0.5 0" material="color: red;"></a-box>
+           <a-entity 
+               obj-model="obj: url(https://raw.githubusercontent.com/ddesmond/theatre-ar/master/box.obj); 
+               mtl: url(https://raw.githubusercontent.com/ddesmond/theatre-ar/master/box.mtl">
+               </a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
