--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <a-scene embedded arjs>
       <a-marker preset="hiro">
            <a-entity 
-               obj-model="obj: url(https://raw.githack.com/ddesmond/theatre-ar/master/box.obj); 
+               obj-model="obj: url(https://raw.githubusercontent.com/ddesmond/theatre-ar/master/box.obj); 
                mtl: url(https://raw.githubusercontent.com/ddesmond/theatre-ar/master/box.mtl">
                </a-entity>
       </a-marker>
