--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body style="margin : 0px; overflow: hidden;">
      <a-scene embedded arjs>
       <a-marker preset="hiro">
-           <a-entity 
-               obj-model="obj: url(https://raw.githubusercontent.com/ddesmond/theatre-ar/master/box.obj); 
-               mtl: url(https://raw.githubusercontent.com/ddesmond/theatre-ar/master/box.mtl">
-               </a-entity>
+        <a-entity 
+            obj-model="obj: url(https://rishavjayswal.github.io/augmented-reality/resources/couch.obj); 
+            mtl: url(https://rishavjayswal.github.io/augmented-reality/resources/couch.mtl)">
+        </a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
