--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <a-scene embedded arjs>
       <a-marker preset="hiro">
         <a-entity 
-            obj-model="obj: url(https://rishavjayswal.github.io/augmented-reality/resources/couch.obj); 
+            obj-model="obj: url(https://dobrojenista.site/files/couch.obj); 
             mtl: url(https://rishavjayswal.github.io/augmented-reality/resources/couch.mtl)">
         </a-entity>
       </a-marker>
